Add Patch, GetSong Pagination, Swagger Router, Migration Data
