# docs/swagger.json
@@ -1,4 +1,7 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "This is a simple swagger for musiclib.",
@@ -22,7 +25,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "string valid",
+                        "description": "id/group/name/date/text/link",
                         "name": "sort",
                         "in": "query"
                     },
@@ -77,7 +80,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "example": "{\n\t\"group\":\"Johnny Mercer\",\n\t\"name\":\"Personality\",\n\t\"releaseDate\":\"1946-12-14\",\n\t\"text\":\"When Madam Pompadour was on a ballroom floor\n\tSaid all the gentlemen, \"Obviously\"\n\t\"The madam has the cutest personality\"\n\tAnd think of all the books about do Barry's looks\n\tWhat was it made her the toast of Paree?\n\tShe had a well-developed personality\",\n\t\"https://www.youtube.com/watch?v=c1L6ZdbL5a0\":\"rer\"\n}"
+                            "example": "{\"group\":\"sample\", \"name\":\"mamedsd\", \"releaseDate\":\"2030-12-12\", \"text\":\"ss\", \"link\":\"sss\"}"
                         }
                     }
                 ],
@@ -107,14 +110,32 @@
                     "Songs"
                 ],
                 "summary": "Get song",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "int \u003e= 0",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "int \u003e 0",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "songId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/musiclib.Song"
-                            }
+                            "$ref": "#/definitions/musiclib.SongPaginated"
                         }
                     },
                     "400": {
@@ -137,11 +158,63 @@
                     "Songs"
                 ],
                 "summary": "Delete song",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "songId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
                     },
                     "204": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal error"
+                    }
+                }
+            },
+            "patch": {
+                "description": "Patch song from db",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Songs"
+                ],
+                "summary": "Patch song",
+                "parameters": [
+                    {
+                        "description": "Song JSON Object",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "{\"group\":\"Patched\", \"name\":\"PatchedName\", \"releaseDate\":\"2023-12-12\", \"text\":\"PatchedText\", \"link\":\"PatchedLink\"}"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "songId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
                         "description": "OK"
                     },
                     "400": {
@@ -174,39 +247,38 @@
                     "type": "string"
                 },
                 "releaseDate": {
-                    "$ref": "#/definitions/pgtype.Date"
+                    "type": "string"
                 },
                 "text": {
                     "type": "string"
                 }
             }
         },
-        "pgtype.Date": {
+        "musiclib.SongPaginated": {
             "type": "object",
             "properties": {
-                "infinityModifier": {
-                    "$ref": "#/definitions/pgtype.InfinityModifier"
-                },
-                "time": {
+                "group": {
                     "type": "string"
                 },
-                "valid": {
-                    "type": "boolean"
+                "id": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "releaseDate": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
-        },
-        "pgtype.InfinityModifier": {
-            "type": "integer",
-            "enum": [
-                1,
-                0,
-                -1
-            ],
-            "x-enum-varnames": [
-                "Infinity",
-                "Finite",
-                "NegativeInfinity"
-            ]
         }
     }
 }
